fix: :pencil: Arreglar typos

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" href="/storage/img/favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./storage/img/favicon.svg" type="image/x-icon">
     <title>Portafolio de servicios</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
             <nav class="navigator">
                 <a id="nav" href="#profile">
                     <p class="nav-txt">Perfil</p>
-                    <img class="nav-icon" src="/storage/img/icon.svg">
+                    <img class="nav-icon" src="./storage/img/icon.svg">
                 </a>
                 <a id="nav" href="#objectives">
                     <p class="nav-txt">Objetivos</p>
@@ -30,7 +30,7 @@
             </nav>
         </div>
         <div class="container-3">
-            <img class="reload" src="/storage/img/reload.svg">
+            <img class="reload" src="./storage/img/reload.svg">
         </div>
 
     </header>
@@ -156,24 +156,24 @@
                 <div class="col-2">
 
                     <div class="contact">
-                        <a><img class="logos" src="/storage/img/github.svg"></a> 
+                        <a><img class="logos" src="./storage/img/github.svg"></a> 
                     </div>
 
                     <div class="contact">
 
-                        <a><img class="logos" src="/storage/img/linkedin.svg"></a>
+                        <a><img class="logos" src="./storage/img/linkedin.svg"></a>
                         
                     </div>
 
                     <div class="contact">
 
-                        <a><img class="logos" src="/storage/img/email.svg"></a>
+                        <a><img class="logos" src="./storage/img/email.svg"></a>
 
                     </div>
 
                     <div class="contact">
 
-                        <a><img class="logos" src="/storage/img/phone.svg"></a>
+                        <a><img class="logos" src="./storage/img/phone.svg"></a>
                         
                     </div>
 
@@ -183,5 +183,5 @@
         </div>
     </footer>
 </body>
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
 </html>
