feat: :sparkles: Agregar información

--- a/index.html
+++ b/index.html
@@ -13,14 +13,22 @@
         <div class="container-1"><h1 class="main-title">Portafolio de Servicios</h1></div>
         <div class="container-1">
             <nav class="navigator">
+
                 <a id="nav" href="#profile">
                     <p class="nav-txt">Perfil</p>
                     <img class="nav-icon" src="./storage/img/icon.svg">
                 </a>
+
                 <a id="nav" href="#objectives">
                     <p class="nav-txt">Objetivos</p>
+                    <img class="nav-icon" src="./storage/img/objective.svg">
                 </a>
-                <a id="nav" href="#mission">Mision</a>
+
+                <a id="nav" href="#mission">
+                    <p class="nav-txt">Misión</p>
+                    <img class="nav-icon" src="./storage/img/icon.svg">
+                </a>
+
                 <a id="nav" href="#vision">Vision</a>
                 <a id="nav" href="#values">Valores</a>
                 <a id="nav" href="#certificates">Certificaciones</a>
@@ -91,7 +99,7 @@
         <div id="values">
 
             <h1>Valores</h1>
-
+            <p>Me destaco en los siguiente aspectos a nivel profesional:</p>
             <li>Creatividad</li>
             <li>Respeto</li>
             <li>Empatía</li>
@@ -106,13 +114,8 @@
 
             <h1>Certificaciones</h1>
 
-            <li>Creatividad</li>
-            <li>Respeto</li>
-            <li>Empatía</li>
-            <li>Amabilidad</li>
-            <li>Igualdad</li>
-            <li>Aprendizaje</li>
-            <li>Solidaridad</li>
+            <h2>Certificación de de Inglés: B2</h2>
+            <p>Texto.</p>
 
         </div>
 
@@ -120,13 +123,7 @@
 
             <h1>Servicios</h1>
 
-            <li>Creatividad</li>
-            <li>Respeto</li>
-            <li>Empatía</li>
-            <li>Amabilidad</li>
-            <li>Igualdad</li>
-            <li>Aprendizaje</li>
-            <li>Solidaridad</li>
+            <p>Ofrezco mis habilidades de desarrollo de Software junto a mis habilidades suaves para un entorno laboral.</p>
 
         </div>
 
@@ -134,13 +131,14 @@
 
             <h1>Proyectos</h1>
 
-            <li>Creatividad</li>
-            <li>Respeto</li>
-            <li>Empatía</li>
-            <li>Amabilidad</li>
-            <li>Igualdad</li>
-            <li>Aprendizaje</li>
-            <li>Solidaridad</li>
+            <h2>Proyecto SpaceX</h2>
+            <p>Realizado en Campuslands en el año 2024. Desarrollo de FrontEnd y BackEnd para vista de información de  lectura de SpaceX API usando HTML, CSS Y JavaScript.</p>
+
+            <h2>Proyecto Kario Media</h2>
+            <p>Realizado en Campuslands en el año 2024. Desarrollo de FrontEnd para una plataforma web de consulta usando HTML y CSS. Se realizó con un compañero.</p>
+
+            <h2>Proyecto ‘Campuslands’</h2>
+            <p>Realizado en Campuslands en el año 2024. Desarrollo de BackEnd para el sistema de administración de una institución de formación con Python. Se realizó con una compañera</p>
 
         </div>
 
@@ -181,6 +179,7 @@
 
             </div>
         </div>
+        <div>Copyright? idk</div>
     </footer>
 </body>
     <script src="./js/script.js"></script>
