feat: :sparkles: Modificar estructura e info

--- a/index.html
+++ b/index.html
@@ -6,155 +6,139 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./storage/img/favicon.svg" type="image/x-icon">
     <title>Portafolio de servicios</title>
+    <meta name="description" content="Portafolio de servicios de un desarrollador de software. Descubre mi perfil, objetivos, misión, visión, valores, certificaciones, servicios y proyectos.">
 </head>
 <body>
     <header>
-
-        <div class="container-1"><h1 class="main-title">Portafolio de Servicios</h1></div>
+        
         <div class="container-1">
+            <h1 class="main-title">Portafolio de Servicios</h1>
+        </div>
+        <div class="container-4">
             <nav class="navigator">
-
-                <a id="nav" href="#profile">
+                <a class="nav-link" href="#profile">
                     <p class="nav-txt">Perfil</p>
-                    <img class="nav-icon" src="./storage/img/icon.svg">
+                    <object class="nav-icon" type="image/svg+xml" data="./storage/img/icon.svg"></object>         
                 </a>
-
-                <a id="nav" href="#objectives">
+                <a class="nav-link" href="#objectives">
                     <p class="nav-txt">Objetivos</p>
-                    <img class="nav-icon" src="./storage/img/objective.svg">
+                    <object class="nav-icon" type="image/svg+xml" data="./storage/img/objective.svg"></object>  
                 </a>
-
-                <a id="nav" href="#mission">
+                <a class="nav-link" href="#mission">
                     <p class="nav-txt">Misión</p>
-                    <img class="nav-icon" src="./storage/img/icon.svg">
+                    <object class="nav-icon" type="image/svg+xml" data="./storage/img/mission.svg"></object>  
                 </a>
-
-                <a id="nav" href="#vision">Vision</a>
-                <a id="nav" href="#values">Valores</a>
-                <a id="nav" href="#certificates">Certificaciones</a>
-                <a id="nav" href="#services">Servicios</a>
-                <a id="nav" href="#projects">Proyectos</a>
-                <a id="nav" href="#contacts">Contáctame</a>
+                <a class="nav-link" href="#vision">
+                    <p class="nav-txt">Visión</p>
+                    <object class="nav-icon" type="image/svg+xml" data="./storage/img/vision.svg"></object>  
+                </a>
+                <a class="nav-link" href="#values">
+                    <p class="nav-txt">Valores</p>
+                    <object class="nav-icon" type="image/svg+xml" data="./storage/img/heart.svg"></object>
+                </a>
+                <a class="nav-link" href="#certificates">
+                    <p class="nav-txt">Certificaciones</p>
+                    <object class="nav-icon" type="image/svg+xml" data="./storage/img/certif.svg"></object>
+                </a>
+                <a class="nav-link" href="#services">
+                    <p class="nav-txt">Servicios</p>
+                    <object class="nav-icon" type="image/svg+xml" data="./storage/img/service.svg"></object>
+                </a>
+                <a class="nav-link" href="#projects">
+                    <p class="nav-txt">Proyectos</p>
+                    <object class="nav-icon" type="image/svg+xml" data="./storage/img/projects.svg"></object>
+                </a>
             </nav>
         </div>
         <div class="container-3">
-            <img class="reload" src="./storage/img/reload.svg">
+            <img class="reload" src="./storage/img/reload.svg" alt="Reload Icon">
         </div>
-
     </header>
 
     <div class="container-2">
 
-        <div id="profile">
+        <section id="profile">
             <h1>Mi perfil</h1>
-
-            <h2>Acerca de mi</h2>
+            <h2>Acerca de mí</h2>
             <p>Me dedico al aprendizaje constante, adquiriendo conocimientos que me permitan abordar de manera creativa los desafíos que surgen en el ámbito del desarrollo de software.</p>
-
             <h2>Competencias</h2>
-            <li>Empatía</li>
-            <li>Creatividad</li>
-            <li>Adaptabilidad</li>
-            <li>Trabajo en equipo</li>
-            <li>Organización</li>
-
+            <ul type="none">
+                <li>Empatía</li>
+                <li>Creatividad</li>
+                <li>Adaptabilidad</li>
+                <li>Trabajo en equipo</li>
+                <li>Organización</li>
+            </ul>
             <h2>Habilidades técnicas</h2>
-            <div>
-
+            <ul type="none">
                 <li>Python</li>
                 <li>HTML/CSS</li>
                 <li>JavaScript</li>
                 <li>MySQL</li>
-                    
-            </div>
-
+            </ul>
             <h2>Información adicional</h2>
+        </section>
 
-        </div>
-
-        <div id="objectives">
-
+        <section id="objectives">
             <h1>Mis objetivos Profesionales</h1>
+            <p>Me dedico al aprendizaje constante, adquiriendo conocimientos que me permitan abordar de manera creativa los desafíos que surgen en el ámbito del desarrollo de software.</p>
+        </section>
 
-            <li>Me dedico al aprendizaje constante, adquiriendo conocimientos que me permitan abordar de manera creativa los desafíos que surgen en el ámbito del desarrollo de software.</li>
-
-        </div>
-
-        <div id="mission">
-
+        <section id="mission">
             <h1>Misión</h1>
+            <p>Mi objetivo profesional es ofrecer mis habilidades y talentos, siendo parte de la evolución constante de la tecnología.</p>
+        </section>
 
-            <li>Ofrezco mis habilidades y talentos, participando del constante crecimiento de las desarrolladoras de software. Con el fin de brindar apoyo y conocimiento a futuros compañeros.</li>
-
-        </div>
-
-        <div id="vision">
-
+        <section id="vision">
             <h1>Visión</h1>
+            <p>Enriquecer mis conocimientos a un nivel superior por medio de la experiencia laboral y el trabajo en equipo. Y así, brindar soluciones creativas e innovadoras.</p>
+        </section>
 
-            <li>Quiero llegar a mejorar mis conocimientos a otro nivel por medio de la experiencia laboral, la paciencia  y la disciplina. Así en un futuro expandir mis talentos al campo del arte</li>
-
-        </div>
-
-        <div id="values">
-
+        <section id="values">
             <h1>Valores</h1>
-            <p>Me destaco en los siguiente aspectos a nivel profesional:</p>
-            <li>Creatividad</li>
-            <li>Respeto</li>
-            <li>Empatía</li>
-            <li>Amabilidad</li>
-            <li>Igualdad</li>
-            <li>Aprendizaje</li>
-            <li>Solidaridad</li>
+            <p>Me destaco en los siguientes aspectos a nivel profesional:</p>
+            <ul type="none">
+                <li>Creatividad</li>
+                <li>Respeto</li>
+                <li>Empatía</li>
+                <li>Amabilidad</li>
+                <li>Igualdad</li>
+                <li>Aprendizaje</li>
+                <li>Solidaridad</li>
+            </ul>
+        </section>
 
-        </div>
-
-        <div id="certificates">
-
+        <section id="certificates">
             <h1>Certificaciones</h1>
-
-            <h2>Certificación de de Inglés: B2</h2>
+            <h2>Certificación de Inglés: B2</h2>
             <p>Texto.</p>
+        </section>
 
-        </div>
-
-        <div id="services">
-
+        <section id="services">
             <h1>Servicios</h1>
-
             <p>Ofrezco mis habilidades de desarrollo de Software junto a mis habilidades suaves para un entorno laboral.</p>
+        </section>
 
-        </div>
-
-        <div id="projects">
-
+        <section id="projects">
             <h1>Proyectos</h1>
-
             <h2>Proyecto SpaceX</h2>
-            <p>Realizado en Campuslands en el año 2024. Desarrollo de FrontEnd y BackEnd para vista de información de  lectura de SpaceX API usando HTML, CSS Y JavaScript.</p>
-
+            <p>Realizado en Campuslands en el año 2024. Desarrollo de FrontEnd y BackEnd para vista de información de lectura de SpaceX API usando HTML, CSS y JavaScript.</p>
             <h2>Proyecto Kario Media</h2>
             <p>Realizado en Campuslands en el año 2024. Desarrollo de FrontEnd para una plataforma web de consulta usando HTML y CSS. Se realizó con un compañero.</p>
-
-            <h2>Proyecto ‘Campuslands’</h2>
-            <p>Realizado en Campuslands en el año 2024. Desarrollo de BackEnd para el sistema de administración de una institución de formación con Python. Se realizó con una compañera</p>
-
-        </div>
-
+            <h2>Proyecto Campuslands</h2>
+            <p>Realizado en Campuslands en el año 2024. Desarrollo de BackEnd para el sistema de administración de una institución de formación con Python. Se realizó con una compañera.</p>
+        </section>
     </div>
 
     <footer id="contacts">
-
-        <div cclass="container-1">
+        <div class="container-1">
             <div class="container-grid">
+                <h1 class="main-title">¡Contáctame!</h1>
 
-                <h1 class="main-title col-1">¡Contáctame!</h1>
-
-                <div class="col-2">
+                <div>
 
                     <div class="contact">
-                        <a><img class="logos" src="./storage/img/github.svg"></a> 
+                        <a><img class="logos" src="./storage/img/github.svg"><p>@furekinux</p></a> 
                     </div>
 
                     <div class="contact">
@@ -179,7 +163,6 @@
 
             </div>
         </div>
-        <div>Copyright? idk</div>
     </footer>
 </body>
     <script src="./js/script.js"></script>
