feat: :sparkles: Modificar estructura

--- a/index.html
+++ b/index.html
@@ -32,44 +32,40 @@
                 <a class="nav-link" href="#mission">
                     <div>
                         <p class="nav-txt">Misión</p>
-                        <img src="./storage/img/icon.svg" class="nav-icon"/>
-                        <object class="nav-icon" type="image/svg+xml" data="./storage/img/mission.svg"></object>  
+                        <img src="./storage/img/mission.svg" class="nav-icon"/>
                     </div>
                 </a>
                 <a class="nav-link" href="#vision">
                     <div>
                         <p class="nav-txt">Visión</p>
-                        <object class="nav-icon" type="image/svg+xml" data="./storage/img/vision.svg"></object>  
+                        <img src="./storage/img/vision.svg" class="nav-icon"/>
                     </div>
                 </a>
                 <a class="nav-link" href="#values">
                     <div>
                         <p class="nav-txt">Valores</p>
-                        <object class="nav-icon" type="image/svg+xml" data="./storage/img/heart.svg"></object>
+                        <img src="./storage/img/heart.svg" class="nav-icon"/>
                     </div>
                 </a>
                 <a class="nav-link" href="#certificates">
                     <div>
                         <p class="nav-txt">Certificaciones</p>
-                        <object class="nav-icon" type="image/svg+xml" data="./storage/img/certif.svg"></object>
+                        <img src="./storage/img/certif.svg" class="nav-icon"/>
                     </div>
                 </a>
                 <a class="nav-link" href="#services">
                     <div>
                         <p class="nav-txt">Servicios</p>
-                        <object class="nav-icon" type="image/svg+xml" data="./storage/img/service.svg"></object>
+                        <img src="./storage/img/service.svg" class="nav-icon"/>
                     </div>
                 </a>
                 <a class="nav-link" href="#projects">
                     <div>
-                    <p class="nav-txt">Proyectos</p>
-                    <object class="nav-icon" type="image/svg+xml" data="./storage/img/projects.svg"></object>
+                        <p class="nav-txt">Proyectos</p>
+                        <img src="./storage/img/projects.svg" class="nav-icon"/>
                     </div>
                 </a>
             </nav>
-        </div>
-        <div class="container-3">
-            <img class="reload" src="./storage/img/reload.svg" alt="Reload Icon">
         </div>
     </header>
 
@@ -77,6 +73,15 @@
 
         <section class="contain-info" id="profile">
             <div class="col-1">
+                <div class="falling-icons">
+                    <img src="./storage/img/267_Python-1024.png" alt="Icon 1" class="icon">
+                    <img src="./storage/img/html-logo.png" alt="Icon 2" class="icon">
+                    <img src="./storage/img/css-logo.png" alt="Icon 3" class="icon">
+                    <img src="./storage/img/js-logo.png" alt="Icon 4" class="icon">
+                    <img src="./storage/img/java-logo.png" alt="Icon 5" class="icon">
+                    <img src="./storage/img/mysql_PNG23.png" alt="Icon 6" class="icon"/>
+
+                </div>
             </div>
             <div class="col-2">
                 <h1 class="title-2">Mi perfil</h1>
@@ -94,9 +99,9 @@
                 <h2>Mis Habilidades técnicas</h2>
                 <div class="contain-abilities">
                     <img class="abilities" src="./storage/img/267_Python-1024.png"/>
-                    <img class="abilities" src="./storage/img/6024bc5746d7436c727825dc4fc23c22-html-programming-language-icon-by-vexels.png"/>
-                    <img class="abilities" src="./storage/img/css-icon-37.png"/>
-                    <img class="abilities" src="./storage/img/615103.png"/>
+                    <img class="abilities" src="./storage/img/html-logo.png"/>
+                    <img class="abilities" src="./storage/img/css-logo.png"/>
+                    <img class="abilities" src="./storage/img/js-logo.png"/>
                     <img class="abilities" src="./storage/img/java-logo.png"/>
                     <img class="abilities" src="./storage/img/mysql_PNG23.png"/>
                 </div>
@@ -110,7 +115,7 @@
             </div>
             <div>
                 <h1 class="title-2">Mis objetivos Profesionales</h1>
-                <p>Me dedico al aprendizaje constante, adquiriendo conocimientos que me permitan abordar de manera creativa los desafíos que surgen en el ámbito del desarrollo de software.</p>
+                <p>Conseguir experiencia laboral a partir de la participación en diversos proyectos de desarrollo de software.</p>
             </div>
         </section>
 
@@ -186,35 +191,27 @@
 
     <footer id="contacts">
         <div class="container-1">
-            <div class="container-grid">
+            <div class="contact-me">
                 <h1 class="main-title">¡Contáctame!</h1>
+            </div>
 
-                <div>
-
-                    <div class="contact">
-                        <a><img class="logos" src="./storage/img/github.svg"><p>@furekinux</p></a> 
-                    </div>
-
-                    <div class="contact">
-
-                        <a><img class="logos" src="./storage/img/linkedin.svg"></a>
-                        
-                    </div>
-
-                    <div class="contact">
-
-                        <a><img class="logos" src="./storage/img/email.svg"></a>
-
-                    </div>
-
-                    <div class="contact">
-
-                        <a><img class="logos" src="./storage/img/phone.svg"></a>
-                        
-                    </div>
-
-                </div>
-
+            <div class="footer-list">
+                <a href="https://github.com/furekinux" target="_blank" class="footer-link">
+                    <img src="./storage/img/github.svg" alt="GitHub">
+                    <span>@furekinux</span>
+                </a>
+                <a href="https://co.linkedin.com/in/daniela-forero-ballen" target="_blank" class="footer-link">
+                    <img src="./storage/img/linkedin.svg" alt="LinkedIn">
+                    <span>Daniela Forero Ballén</span>
+                </a>
+                <a href="mailto:foreroballendaniela@gmail.com" class="footer-link">
+                    <img src="./storage/img/email.svg" alt="Email">
+                    <span>foreroballendaniela@gmail.com</span>
+                </a>
+                <a href="tel:+573112449935" class="footer-link">
+                    <img src="./storage/img/phone.svg" alt="Teléfono">
+                    <span>+57 3112449935</span>
+                </a>
             </div>
         </div>
     </footer>
